--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.0.6",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "raw-loader": "^2.0.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.31.0",
