--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "cannon": "^0.6.2",
+    "csv2json": "^2.0.2",
     "three": "^0.104.0",
     "three-obj-loader": "^1.1.3",
     "three-orbit-controls": "^82.1.0",
